<package format="2">

  <name>lynxmotion_al5d</name>
  <version>0.0.1</version>
  <description>
     A metapackage for all of the configuration and launch files for using the lynxmotion_al5d
  </description>
  <author email="a-hudson-0117@no-reply.com">a-hudson-0117</author>
  <maintainer email="a-hudson-0117@no-reply.com">a-hudson-0117</maintainer>

  <license>BSD</license>

  <url type="website">http://moveit.ros.org/</url>
  <url type="bugtracker">https://github.com/moveit/moveit/issues</url>
  <url type="repository">https://github.com/moveit/moveit</url>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>lynxmotion_al5d_description</exec_depend>
  <exec_depend>lynxmotion_al5d_moveit</exec_depend>

  <export><metapackage/></export>
</package>
